--- a/Acerca de nosotros.html
+++ b/Acerca de nosotros.html
@@ -1,203 +1,155 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" href="img/log/LogoCabecera.jpeg" />
-    <title>Acerca de nosotros | Exotic Liquor</title>
-    <link rel="stylesheet" href="css/styleAN.css" />
-  </head>
 
-  <body>
-    <header>
-      <div>
-        <a href="index.html">
-          <img
-            class="logo_cabecera"
-            src="img/log/LogoCabecera.jpeg"
-            alt="Exotic liquor"
-          />
-        </a>
-      </div>
-      <div class="redes_sociales">
-        <a
-          href="https://www.facebook.com/exotic_liquor-102830135444774"
-          target="_blank"
-        >
-          <img src="icon/bxl-facebook.svg" alt="Facebook.com" />
-        </a>
-        <a
-          href="https://www.instagram.com/exotic_liquor/?hl=es"
-          target="_blank"
-        >
-          <img src="icon/bxl-instagram.svg" alt="Instagram.com" />
-        </a>
-        <a
-          href="https://www.facebook.com/exotic_liquor-102830135444774"
-          target="_blank"
-        >
-          <img src="icon/bxl-whatsapp.svg" alt="WhatsApp.com" />
-        </a>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap" rel="stylesheet" />
+  <link rel="shortcut icon" href="img/log/LogoCabecera.jpeg" />
+  <title>Acerca de nosotros | Exotic Liquor</title>
+  <link rel="stylesheet" href="css/styleAN.css" />
+</head>
 
-      <nav class="menu">
-        <section class="menu__conteiner">
-          <ul class="menu__links">
-            <li class="menu__item">
-              <a href="index.html" class="menu__link">Inicio</a>
-            </li>
+<body>
+  <header>
+    <div>
+      <a href="index.html">
+        <img class="logo_cabecera" src="img/log/LogoCabecera.jpeg" alt="Exotic liquor" />
+      </a>
+    </div>
+    <div class="redes_sociales">
+      <a href="https://www.facebook.com/exotic_liquor-102830135444774" target="_blank">
+        <img src="icon/bxl-facebook.svg" alt="Facebook.com" />
+      </a>
+      <a href="https://www.instagram.com/exotic_liquor/?hl=es" target="_blank">
+        <img src="icon/bxl-instagram.svg" alt="Instagram.com" />
+      </a>
+      <a href="https://www.facebook.com/exotic_liquor-102830135444774" target="_blank">
+        <img src="icon/bxl-whatsapp.svg" alt="WhatsApp.com" />
+      </a>
+    </div>
 
-            <li class="menu__item menu__item--show">
-              <p class="menu__link">
-                Acerca de nosotros
-                <img src="asset/arrow.svg" class="menu__arrow" />
-              </p>
+    <nav class="menu">
+      <section class="menu__conteiner">
+        <ul class="menu__links">
+          <li class="menu__item">
+            <a href="index.html" class="menu__link">Inicio</a>
+          </li>
 
-              <ul class="menu__nestings">
-                <li class="menu__inside">
-                  <a
-                    href="Acerca de nosotros.html"
-                    class="menu__link menu__link--inside"
-                    >Historia</a
-                  >
-                </li>
-                <li class="menu__inside">
-                  <a
-                    href="MisionVision.html"
-                    class="menu__link menu__link--inside"
-                    >Mision y Vision</a
-                  >
-                </li>
-              </ul>
-            </li>
+          <li class="menu__item menu__item--show">
+            <p class="menu__link">
+              Acerca de nosotros
+              <img src="asset/arrow.svg" class="menu__arrow" />
+            </p>
 
-            <li class="menu__item">
-              <a class="menu__link"
-                >Municipios
-                <img src="asset/arrow.svg" class="menu__arrow" />
-              </a>
-              <ul class="menu__nestings">
-                <li class="menu__inside">
-                  <a href="Ibagué.html" class="menu__link menu__link--inside"
-                    >Ibague</a
-                  >
-                </li>
-                <li class="menu__inside">
-                  <a
-                    href="anzoategui.html"
-                    class="menu__link menu__link--inside"
-                    >Anzoategui</a
-                  >
-                </li>
-              </ul>
-            </li>
+            <ul class="menu__nestings">
+              <li class="menu__inside">
+                <a href="Acerca de nosotros.html" class="menu__link menu__link--inside">Historia</a>
+              </li>
+              <li class="menu__inside">
+                <a href="MisionVision.html" class="menu__link menu__link--inside">Mision y Vision</a>
+              </li>
+            </ul>
+          </li>
 
-            <li class="menu__item">
-              <a href="Equipo_Trabajo.html" class="menu__link"
-                >Equipo de trabajo</a
-              >
-            </li>
-          </ul>
-        </section>
-      </nav>
-      <div class="contactanos">
-        <a href="Contactanos.html">Contactanos</a>
-      </div>
-    </header>
-    <main>
-      <h1 class="titulo">Nuestra Empresa</h1>
-      <img
-        class="primera_imagen"
-        src="img/AcercaNosotros/nuestraEmpresa.jpg"
-        alt="primera_imagen"
-      />
-      <div class="contenedor1">
-        <p class="parrafo">
-          Nuestra empresa es el claro ejemplo que todo con esfuerzo se puede
-          lograr, Surgio de una pequeña idea y ahora estamos felices del gran
-          trabajo que hemos conseguido, La empresa como nuestro nombre lo indica
-          se encarga de elaborar licor a base de café, Surgen recetas como
-          cócteles finalmente elaborados hasta nuestro granizado de café de los
-          Andes VIP, Nuestros productos son de calidad y 100% naturales.
+          <li class="menu__item">
+            <a class="menu__link">Municipios
+              <img src="asset/arrow.svg" class="menu__arrow" />
+            </a>
+            <ul class="menu__nestings">
+              <li class="menu__inside">
+                <a href="Ibagué.html" class="menu__link menu__link--inside">Ibague</a>
+              </li>
+              <li class="menu__inside">
+                <a href="anzoategui.html" class="menu__link menu__link--inside">Anzoategui</a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="menu__item">
+            <a href="Equipo_Trabajo.html" class="menu__link">Equipo de trabajo</a>
+          </li>
+        </ul>
+      </section>
+    </nav>
+    <div class="contactanos">
+      <a href="Contactanos.html">Contactanos</a>
+    </div>
+  </header>
+  <main>
+    <h1 class="titulo">Nuestra Empresa</h1>
+    <img class="primera_imagen" src="img/AcercaNosotros/NuestraEmpresa.jpg" alt="primera_imagen" />
+    <div class="contenedor1">
+      <p class="parrafo">
+        Nuestra empresa es el claro ejemplo que todo con esfuerzo se puede
+        lograr, Surgio de una pequeña idea y ahora estamos felices del gran
+        trabajo que hemos conseguido, La empresa como nuestro nombre lo indica
+        se encarga de elaborar licor a base de café, Surgen recetas como
+        cócteles finalmente elaborados hasta nuestro granizado de café de los
+        Andes VIP, Nuestros productos son de calidad y 100% naturales.
+      </p>
+    </div>
+    <hr class="separador1" />
+    <h1 class="titulo2">Nuestra Historia</h1>
+    <div class="contenedor">
+      <img class="segunda_imagen" src="img/AcercaNosotros/Historia.jpg" alt="segunda_imagen" />
+      <div class="parrafo2">
+        <p>
+          Exotic Liquor sas, es una empresa que nace a partir de una idea de
+          emprendimiento de un joven empresario, quien desde el año 2016
+          adelanto junto con un equipo de trabajo la idea de crear un
+          productorepresentativo del departamento del Tolima y el país. fue
+          ahí donde se vio por primera vez el licor de café de los andes vip,
+          se realizaron participaciones en diferentes ferias y eventos con
+          énfasis en el agro y el café como agro expo 2017, feria de cafes
+          especiales en anzoategui año 2017, feria de te y café en la casa del
+          señor embajador de la republica popular de China, lanzamiento tasa a
+          la excelencia Colombia tierra de diversidad en la casa del Tolima en
+          Bogota, entre muchas más, para poder mirar la aceptación del
+          producto, y desarrollarlo de tal manera que lograra los objetivos
+          planteados. en el año 2019 en la convocatoria 69 primer corte, la
+          empresa Exotic Liquor sas sale favorecida con recursos para poner en
+          marcha dicho proyecto e idea innovadora. posteriormente el 08 de
+          Julio del 2020 es cuando se inicia la ejecución de la empresa y en
+          el mes de Septiembre del año 2021 la empresa ya cuenta con todos los
+          permisos y requisitos legales para iniciar con su venta.
         </p>
       </div>
-      <hr class="separador1" />
-      <h1 class="titulo2">Nuestra Historia</h1>
-      <div class="contenedor">
-        <img
-          class="segunda_imagen"
-          src="img/AcercaNosotros/Historia.jpg"
-          alt="segunda_imagen"
-        />
-        <div class="parrafo2">
-          <p>
-            Exotic Liquor sas, es una empresa que nace a partir de una idea de
-            emprendimiento de un joven empresario, quien desde el año 2016
-            adelanto junto con un equipo de trabajo la idea de crear un
-            productorepresentativo del departamento del Tolima y el país. fue
-            ahí donde se vio por primera vez el licor de café de los andes vip,
-            se realizaron participaciones en diferentes ferias y eventos con
-            énfasis en el agro y el café como agro expo 2017, feria de cafes
-            especiales en anzoategui año 2017, feria de te y café en la casa del
-            señor embajador de la republica popular de China, lanzamiento tasa a
-            la excelencia Colombia tierra de diversidad en la casa del Tolima en
-            Bogota, entre muchas más, para poder mirar la aceptación del
-            producto, y desarrollarlo de tal manera que lograra los objetivos
-            planteados. en el año 2019 en la convocatoria 69 primer corte, la
-            empresa Exotic Liquor sas sale favorecida con recursos para poner en
-            marcha dicho proyecto e idea innovadora. posteriormente el 08 de
-            Julio del 2020 es cuando se inicia la ejecución de la empresa y en
-            el mes de Septiembre del año 2021 la empresa ya cuenta con todos los
-            permisos y requisitos legales para iniciar con su venta.
-          </p>
-        </div>
-      </div>
-    </main>
-    <div class="separador">
-      <p class="frase">“Un tributo a los caficultores tolimenses”</p>
     </div>
-    <div id="boton">
-      <i class="fas fa-chevron-up">
-        <img src="icon/up-arrow.svg" alt="" />
-      </i>
-    </div>
+  </main>
+  <div class="separador">
+    <p class="frase">“Un tributo a los caficultores tolimenses”</p>
+  </div>
+  <div id="boton">
+    <i class="fas fa-chevron-up">
+      <img src="icon/up-arrow.svg" alt="" />
+    </i>
+  </div>
 
-    <footer>
-      <a href="index.html">
-        <img class="logo_pie" src="img/log/LogoPiedepagina.jpeg" alt="logo" />
+  <footer>
+    <a href="index.html">
+      <img class="logo_pie" src="img/log/LogoPiedepagina.jpeg" alt="logo" />
+    </a>
+    <div class="redes_socialesF">
+      <a href="https://www.facebook.com/exotic_liquor-102830135444774" target="_blank">
+        <img src="icon/bxl-facebook.svg" alt="Facebook.com" />
       </a>
-      <div class="redes_socialesF">
-        <a
-          href="https://www.facebook.com/exotic_liquor-102830135444774"
-          target="_blank"
-        >
-          <img src="icon/bxl-facebook.svg" alt="Facebook.com" />
-        </a>
-        <a
-          href="https://www.instagram.com/exotic_liquor/?hl=es"
-          target="_blank"
-        >
-          <img src="icon/bxl-instagram.svg" alt="Instagram.com" />
-        </a>
-        <a
-          href="https://www.facebook.com/exotic_liquor-102830135444774"
-          target="_blank"
-        >
-          <img src="icon/bxl-whatsapp.svg" alt="WhatsApp.com" />
-        </a>
-      </div>
-      <div class="contactanosF">
-        <a href="Contactanos.html">Contactanos</a>
-      </div>
-    </footer>
-    <script src="js/main.js"></script>
-    <script src="js/AcercaNosotros.js"></script>
-  </body>
+      <a href="https://www.instagram.com/exotic_liquor/?hl=es" target="_blank">
+        <img src="icon/bxl-instagram.svg" alt="Instagram.com" />
+      </a>
+      <a href="https://www.facebook.com/exotic_liquor-102830135444774" target="_blank">
+        <img src="icon/bxl-whatsapp.svg" alt="WhatsApp.com" />
+      </a>
+    </div>
+    <div class="contactanosF">
+      <a href="Contactanos.html">Contactanos</a>
+    </div>
+  </footer>
+  <script src="js/main.js"></script>
+  <script src="js/AcercaNosotros.js"></script>
+</body>
+
 </html>
