--- a/Contactanos.html
+++ b/Contactanos.html
@@ -1,207 +1,163 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="img/log/LogoCabecera.jpeg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap"
-      rel="stylesheet"
-    />
-    <title>Contactanos | Exotic Liquor</title>
-    <link rel="stylesheet" href="css/styleC.css" />
-  </head>
 
-  <body>
-    <header>
-      <div>
-        <a href="index.html">
-          <img
-            class="logo_cabecera"
-            src="img/log/LogoCabecera.jpeg"
-            alt="Exotic liquor"
-          />
-        </a>
-      </div>
-      <div class="redes_sociales">
-        <a
-          href="https://www.facebook.com/exotic_liquor-102830135444774"
-          target="_blank"
-        >
-          <img src="icon/bxl-facebook.svg" alt="Facebook.com" />
-        </a>
-        <a
-          href="https://www.instagram.com/exotic_liquor/?hl=es"
-          target="_blank"
-        >
-          <img src="icon/bxl-instagram.svg" alt="Instagram.com" />
-        </a>
-        <a
-          href="https://www.facebook.com/exotic_liquor-102830135444774"
-          target="_blank"
-        >
-          <img src="icon/bxl-whatsapp.svg" alt="WhatsApp.com" />
-        </a>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="img/log/LogoCabecera.jpeg" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap" rel="stylesheet" />
+  <title>Contactanos | Exotic Liquor</title>
+  <link rel="stylesheet" href="css/styleC.css" />
+</head>
 
-      <nav class="menu">
-        <section class="menu__conteiner">
-          <ul class="menu__links">
-            <li class="menu__item">
-              <a href="index.html" class="menu__link">Inicio</a>
-            </li>
-
-            <li class="menu__item menu__item--show">
-              <p class="menu__link">
-                Acerca de nosotros
-                <img src="asset/arrow.svg" class="menu__arrow" />
-              </p>
-
-              <ul class="menu__nestings">
-                <li class="menu__inside">
-                  <a
-                    href="Acerca de nosotros.html"
-                    class="menu__link menu__link--inside"
-                    >Historia</a
-                  >
-                </li>
-                <li class="menu__inside">
-                  <a
-                    href="MisionVision.html"
-                    class="menu__link menu__link--inside"
-                    >Mision y Vision</a
-                  >
-                </li>
-              </ul>
-            </li>
-
-            <li class="menu__item">
-              <p class="menu__link">
-                Municipios
-                <img src="asset/arrow.svg" class="menu__arrow" />
-              </p>
-              <ul class="menu__nestings">
-                <li class="menu__inside">
-                  <a href="Ibagué.html" class="menu__link menu__link--inside"
-                    >Ibague</a
-                  >
-                </li>
-                <li class="menu__inside">
-                  <a
-                    href="anzoategui.html"
-                    class="menu__link menu__link--inside"
-                    >Anzoategui</a
-                  >
-                </li>
-              </ul>
-            </li>
-
-            <li class="menu__item">
-              <a href="Equipo_Trabajo.html" class="menu__link"
-                >Equipo de Trabajo</a
-              >
-            </li>
-          </ul>
-        </section>
-      </nav>
-      <div class="contactanos">
-        <a href="Contactanos.html">Contactanos</a>
-      </div>
-    </header>
-    <main>
-      <h1>Como contactarnos</h1>
-      <br />
-      <div class="Pcontacto">
-        <p>
-         
-Nuestra empresa esta ubicada en el mayor centro empresarial, comercial 
-y de servicios de la región. Su ubicaión privilegiada, infracestructura 
-idonea y servicios lo convierte en la plataforma ideal para nuestra empresa. <br><br> 
-exoticliquor@hotmail.com <br>
-exoticliquor@gmail.com<br>
-2675069<br>
-3227601249<br>
-        </p>
-      </div>
-      <div class="redes_sociales_black">
-        <a
-          href="https://www.facebook.com/exotic_liquor-102830135444774"
-          target="_blank"
-        >
-          <img src="icon/black/bxl-facebook.svg" alt="Facebook.com" />
-        </a>
-        <a
-          href="https://www.instagram.com/exotic_liquor/?hl=es"
-          target="_blank"
-        >
-          <img src="icon/black/bxl-instagram.svg" alt="Instagram.com" />
-        </a>
-        <a href="https://web.whatsapp.com/" target="_blank">
-          <img src="icon/black/bxl-whatsapp.svg" alt="WhatsApp.com" />
-        </a>
-      </div>
-      <hr class="lineaC" />
-      <div class="informacion_lugar">
-        <p>
-   
- Parque logístico nacional del Tolima bodega C-42       <br> <br>
-         El Parque logistico nacional del Tolima se encuentra en el kilometro 17 
-via ibague Bogotá. Corregimiento Buenos Aires.
-Es el unico parque logistico que cuenta con acueducto para el suministro
-de agua. 
-
-        </p>
-      </div>
-      <div class="Container_map">
-        <div class="mapa">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248.61943683296306!2d-75.19867857262!3d4.427681295768566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e38c508f294f145%3A0x70220851585e2a97!2sParque%20Log%C3%ADstico%20Nacional%20Del%20Tolima!5e0!3m2!1ses-419!2sco!4v1639437086257!5m2!1ses-419!2sco" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-          ></iframe>
-        </div>
-      </div>
-    </main>
-    <div id="boton">
-      <i class="fas fa-chevron-up">
-        <img src="icon/up-arrow.svg" alt="" />
-      </i>
-    </div>
-
-    <div class="separador">
-      <p class="frase">“Un tributo a los caficultores tolimenses”</p>
-    </div>
-
-    <footer>
+<body>
+  <header>
+    <div>
       <a href="index.html">
-        <img class="logo_pie" src="img/log/LogoPiedepagina.jpeg" alt="logo" />
+        <img class="logo_cabecera" src="img/log/LogoCabecera.jpeg" alt="Exotic liquor" />
       </a>
-      <div class="redes_socialesF">
-        <a
-          href="https://www.facebook.com/exotic_liquor-102830135444774"
-          target="_blank"
-        >
-          <img src="icon/bxl-facebook.svg" alt="Facebook.com" />
-        </a>
-        <a
-          href="https://www.instagram.com/exotic_liquor/?hl=es"
-          target="_blank"
-        >
-          <img src="icon/bxl-instagram.svg" alt="Instagram.com" />
-        </a>
-        <a
-          href="https://www.facebook.com/exotic_liquor-102830135444774"
-          target="_blank"
-        >
-          <img src="icon/bxl-whatsapp.svg" alt="WhatsApp.com" />
-        </a>
+    </div>
+    <div class="redes_sociales">
+      <a href="https://www.facebook.com/exotic_liquor-102830135444774" target="_blank">
+        <img src="icon/bxl-facebook.svg" alt="Facebook.com" />
+      </a>
+      <a href="https://www.instagram.com/exotic_liquor/?hl=es" target="_blank">
+        <img src="icon/bxl-instagram.svg" alt="Instagram.com" />
+      </a>
+      <a href="https://www.facebook.com/exotic_liquor-102830135444774" target="_blank">
+        <img src="icon/bxl-whatsapp.svg" alt="WhatsApp.com" />
+      </a>
+    </div>
+
+    <nav class="menu">
+      <section class="menu__conteiner">
+        <ul class="menu__links">
+          <li class="menu__item">
+            <a href="index.html" class="menu__link">Inicio</a>
+          </li>
+
+          <li class="menu__item menu__item--show">
+            <p class="menu__link">
+              Acerca de nosotros
+              <img src="asset/arrow.svg" class="menu__arrow" />
+            </p>
+
+            <ul class="menu__nestings">
+              <li class="menu__inside">
+                <a href="Acerca de nosotros.html" class="menu__link menu__link--inside">Historia</a>
+              </li>
+              <li class="menu__inside">
+                <a href="MisionVision.html" class="menu__link menu__link--inside">Mision y Vision</a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="menu__item">
+            <p class="menu__link">
+              Municipios
+              <img src="asset/arrow.svg" class="menu__arrow" />
+            </p>
+            <ul class="menu__nestings">
+              <li class="menu__inside">
+                <a href="Ibagué.html" class="menu__link menu__link--inside">Ibague</a>
+              </li>
+              <li class="menu__inside">
+                <a href="anzoategui.html" class="menu__link menu__link--inside">Anzoategui</a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="menu__item">
+            <a href="Equipo_Trabajo.html" class="menu__link">Equipo de Trabajo</a>
+          </li>
+        </ul>
+      </section>
+    </nav>
+    <div class="contactanos">
+      <a href="Contactanos.html">Contactanos</a>
+    </div>
+  </header>
+  <main>
+    <h1>Como contactarnos</h1>
+    <br />
+    <div class="Pcontacto">
+      <p>
+
+        Nuestra empresa esta ubicada en el mayor centro empresarial, comercial
+        y de servicios de la región. Su ubicaión privilegiada, infracestructura
+        idonea y servicios lo convierte en la plataforma ideal para nuestra empresa. <br><br>
+        exoticliquor@hotmail.com <br>
+        exoticliquor@gmail.com<br>
+        2675069<br>
+        3227601249<br>
+      </p>
+    </div>
+    <div class="redes_sociales_black">
+      <a href="https://www.facebook.com/exotic_liquor-102830135444774" target="_blank">
+        <img src="icon/black/bxl-facebook.svg" alt="Facebook.com" />
+      </a>
+      <a href="https://www.instagram.com/exotic_liquor/?hl=es" target="_blank">
+        <img src="icon/black/bxl-instagram.svg" alt="Instagram.com" />
+      </a>
+      <a href="https://web.whatsapp.com/" target="_blank">
+        <img src="icon/black/bxl-whatsapp.svg" alt="WhatsApp.com" />
+      </a>
+    </div>
+    <hr class="lineaC" />
+    <div class="informacion_lugar">
+      <p>
+
+        Parque logístico nacional del Tolima bodega C-42 <br> <br>
+        El Parque logistico nacional del Tolima se encuentra en el kilometro 17
+        via ibague Bogotá. Corregimiento Buenos Aires.
+        Es el unico parque logistico que cuenta con acueducto para el suministro
+        de agua.
+
+      </p>
+    </div>
+    <div class="Container_map">
+      <div class="mapa">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248.61943683296306!2d-75.19867857262!3d4.427681295768566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e38c508f294f145%3A0x70220851585e2a97!2sParque%20Log%C3%ADstico%20Nacional%20Del%20Tolima!5e0!3m2!1ses-419!2sco!4v1639437086257!5m2!1ses-419!2sco"
+          width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" </iframe>
+          ></iframe>
       </div>
-      <div class="contactanosF">
-        <a href="Contactanos.html">Contactanos</a>
-      </div>
-    </footer>
-    <script src="js/main.js"></script>
-    <script src="js/contactanos.js"></script>
-  </body>
+    </div>
+  </main>
+  <div id="boton">
+    <i class="fas fa-chevron-up">
+      <img src="icon/up-arrow.svg" alt="" />
+    </i>
+  </div>
+
+  <div class="separador">
+    <p class="frase">“Un tributo a los caficultores tolimenses”</p>
+  </div>
+
+  <footer>
+    <a href="index.html">
+      <img class="logo_pie" src="img/log/LogoPiedepagina.jpeg" alt="logo" />
+    </a>
+    <div class="redes_socialesF">
+      <a href="https://www.facebook.com/exotic_liquor-102830135444774" target="_blank">
+        <img src="icon/bxl-facebook.svg" alt="Facebook.com" />
+      </a>
+      <a href="https://www.instagram.com/exotic_liquor/?hl=es" target="_blank">
+        <img src="icon/bxl-instagram.svg" alt="Instagram.com" />
+      </a>
+      <a href="https://www.facebook.com/exotic_liquor-102830135444774" target="_blank">
+        <img src="icon/bxl-whatsapp.svg" alt="WhatsApp.com" />
+      </a>
+    </div>
+    <div class="contactanosF">
+      <a href="Contactanos.html">Contactanos</a>
+    </div>
+  </footer>
+  <script src="js/main.js"></script>
+  <script src="js/contactanos.js"></script>
+</body>
+
 </html>
